Translation of rest of pages